Make: Support Handbook: Fix entry-content link overflow
This fixes an issue on mobile devices where long links overflow the page width

See #6970

Props upadalavipul


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@12592 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -87,6 +87,10 @@ td {
 	margin-top: 1em;
 }
 
+.entry-content p a {
+	word-wrap: break-word;
+}
+
 .entry-content td,
 .entry-content th {
 	padding: 1em !important;
